# proof-buddy

./: .ocamlformat  CHANGELOG.md  LICENSE  Makefile  README.md  dune-project  proof-buddy.cabal  proof-buddy.opam
exe/: dune  main.ml
lib/: ast.ml  ast.mli  dune  env.ml  env.mli  lexer.mll  norm.ml  norm.mli  parser.mly  syntax.ml
src/PB/Data/: FVarId.hs  Name.hs  Term.hs
src/PB/Kernel/: AST.md
utils/: dune  monad.ml  monad.mli  pervasive.ml
